--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </form>
       </div>
       <ul class="card-container" data-js="card-container">
-        <li class="card">
+        <!-- <li class="card">
           <div class="card__image-container">
             <img
               class="card__image"
@@ -50,8 +50,8 @@
               <dt class="card__info-title">Occurrences</dt>
               <dd class="card__info-description">51</dd>
             </dl>
-          </div>
-        </li>
+          </div> 
+        </li> -->
       </ul>
     </main>
     <nav class="navigation" data-js="navigation">
